bindings/cpp (deprecated)/eat.hpp

    enum class KeyState{
        Released,
        Pressed,
        Held,
        Inactive,
    };
    enum class Key{
        Escape,
        Caps,
        Space, Tab,
        Backspace, Delete,
        Home, End,
        PageUp, PageDown,
        Insert,
        Enter,

        LShift, RShift,
        LCtrl, RCtrl,
        LAlt, RAlt,
        LSuper, RSuper,

        Up, Left, Right, Down,

        A, B, C, D, E,
        F, G, H, I, J,
        K, L, M, N, O,
        P, Q, R, S, T,
        U, V, W, X, Y, Z,
        
        K1, K2, K3, K4, K5,
        K6, K7, K8, K9, K0,

        F1, F2, F3, F4,
        F5, F6, F7, F8,
        F9, F10, F11, F12,

        Last,
    };
    enum class Mouse{
        Left, Right, Middle,
        Last,
    };
    enum class MouseMode{
        Normal,
        Hidden,
        Locked,
    };
    extern vec2<float> mouse;
    extern vec2<double> mouse64;
    extern vec2<float> mouse_delta;
    extern vec2<double> mouse_delta64;
    extern vec2<float> mouse_scroll;
    extern vec2<double> mouse_scroll64;
    extern std::string text_input;
    extern std::string tick_text_input;
    bool
    is_key(
        Key key
        );
    bool
    is_key_pressed(
        Key key
        );
    bool
    is_key_released(
        Key key
        );
    bool
    is_mouse(
        Mouse mouse
        );
    bool
    is_mouse_pressed(
        Mouse mouse
        );
    bool
    is_mouse_released(
        Mouse mouse
        );
    bool
    tick_is_key(
        Key key
        );
    bool
    tick_is_key_pressed(
        Key key
        );
    bool
    tick_is_key_released(
        Key key
        );
    bool
    tick_is_mouse(
        Mouse mouse
        );
    bool
    tick_is_mouse_pressed(
        Mouse mouse
        );
    bool
    tick_is_mouse_released(
        Mouse mouse
        );
    void
    set_mouse_mode(
        MouseMode mode
        );
    extern float time;
    extern float delta;