core/eaw/eaw.h

extern double eaw_time;
extern double eaw_delta;